Fixed profile-options (someone set wrong height)

--- a/cc/static/css/user.css
+++ b/cc/static/css/user.css
@@ -106,7 +106,6 @@
     right: 0;
     top: 0;
     width: 180px;
-    height: 182px;
     background-color: #FFF !important;
     padding: 20px;
     font-weight: 300 !important;
